ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>