ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/B2B_Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cart_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>