ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>