ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Billing_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province__c</fullName>
    <label>Billing Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>