ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>