ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Desired_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Shipment_Date__c</fullName>
    <label>Desired Shipment Date</label>
    <type>Date</type>
</CustomField>