ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Middle_initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_initial__c</fullName>
    <label>Middle initial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>