ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>