ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>