ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>Quote_Source__c</fullName>
    <inlineHelpText>If &apos;Ascensus Store&apos;, means quote was created from store</inlineHelpText>
    <label>Quote Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascensus Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>