ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/QuoteCountry__c.field-meta.xml
<CustomField>
    <fullName>QuoteCountry__c</fullName>
    <label>QuoteCountry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>