ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/fields/QuoteState__c.field-meta.xml
<CustomField>
    <fullName>QuoteState__c</fullName>
    <label>QuoteState</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>