ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Quote/listViews/Strem_com_Quotes.listView-meta.xml
<ListView>
    <fullName>Strem_com_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.DESCRIPTION</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>QuoteCountry__c</columns>
    <columns>Address__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Strem.com - Quotes</label>
</ListView>